# todomate-cli

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  error.rs  main.rs  output.rs
src/api/: mod.rs  models.rs
src/auth/: device_flow.rs  gh_token.rs  mod.rs  token_store.rs
src/commands/: goals.rs  mod.rs  todos.rs  vision.rs
