[package]
name = "todomate-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for todo.ac — manage your todos from the terminal"
license = "MIT"
repository = "https://github.com/alstes/todomate-cli"
keywords = ["todo", "productivity", "cli"]

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
toml = "0.8"
owo-colors = "4"
anyhow = "1"
thiserror = "2"
comfy-table = "7"
dirs = "5"
